# python-codecs7z

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  setup.py
.github/workflows/: ci.yaml  manylinux.yaml  wheel.yaml
cmake/: CMakeLists.txt  setup.py
codecs7z/: __init__.py  version.py
src/: codecs7z.cpp  pyslz.cpp  winpthreads.h
test/: test_codecs7z.py
